5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4325/executions/1602_842.log
== TEST (2019-03-20 19:25:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo
number = float(input("Digite 4 digítos!:"))

-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:25:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo
number = float(input("Digite 4 digítos:"))

-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:25:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo
number = float(input("Digite os digítos:"))

-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:25:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
number = float(input("Digite os digítos:"))

-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:26:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = (input("Digite:")

-- ERROR:
File "XXXX", line 5
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:26:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = (input("Digite:")
-- ERROR:
File "XXXX", line 5
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:26:51) 
-- CODE:
number = (input("Numeros")
-- ERROR:
File "XXXX", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:38:53) 
-- CODE:
number = (input("Numeros")
total = (s)
-- ERROR:
File "XXXX", line 2
    total = (s)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:38:56) 
-- CODE:
number = (input("Numeros")

-- ERROR:
File "XXXX", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:11:19) 
-- CODE:
number = int(input("Numeros")
print= ()

-- ERROR:
File "XXXX", line 2
    print= ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:11:19) 
-- CODE:
number = int(input("Numeros")
print= ()

-- ERROR:
File "XXXX", line 2
    print= ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:11:20) 
-- CODE:
number = int(input("Numeros")
print= ()

-- ERROR:
File "XXXX", line 2
    print= ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:11:20) 
-- CODE:
number = int(input("Numeros")
print= ()

-- ERROR:
File "XXXX", line 2
    print= ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:11:20) 
-- CODE:
number = int(input("Numeros")
print= ()

-- ERROR:
File "XXXX", line 2
    print= ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:11:20) 
-- CODE:
number = int(input("Numeros")
print= ()

-- ERROR:
File "XXXX", line 2
    print= ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:11:20) 
-- CODE:
number = int(input("Numeros")
print= ()

-- ERROR:
File "XXXX", line 2
    print= ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:11:21) 
-- CODE:
number = int(input("Numeros")
print= ()

-- ERROR:
File "XXXX", line 2
    print= ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:11:21) 
-- CODE:
number = int(input("Numeros")
print= ()

-- ERROR:
File "XXXX", line 2
    print= ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:11:22) 
-- CODE:
number = int(input("Numeros")
print= ()

-- ERROR:
File "XXXX", line 2
    print= ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:11:22) 
-- CODE:
number = int(input("Numeros")
print= ()

-- ERROR:
File "XXXX", line 2
    print= ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:11:22) 
-- CODE:
number = int(input("Numeros")
print= ()

-- ERROR:
File "XXXX", line 2
    print= ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:52:28) 
-- CODE:
number = int(input("Numeros")
print= ()

-- ERROR:
File "XXXX", line 2
    print= ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:52:34) 
-- CODE:
number = int(input("Numeros")
print= ()

-- ERROR:
File "XXXX", line 2
    print= ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:52:43) 
-- CODE:
number = int(input("Numeros")
print= (number)

-- ERROR:
File "XXXX", line 2
    print= (number)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:52:52) 
-- CODE:
number = int(input("Numeros")
print = (number)

-- ERROR:
File "XXXX", line 2
    print = (number)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:53:05) 
-- CODE:
number = int(input("Numeros:")
print = (number)

-- ERROR:
File "XXXX", line 2
    print = (number)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:53:08) 
-- CODE:
number = int(input("Numeros:")
print = (number)

-- ERROR:
File "XXXX", line 2
    print = (number)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:35:26) 
-- CODE:
n = int(input("Numeros:")
while (n>0)
resto = n%10
n = (n-resto)/10
soma = (soma+resto)
print = ("A soma dos números é:", n)

-- ERROR:
File "XXXX", line 2
    while (n>0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:35:35) 
-- CODE:
n = int(input("Numeros:")
while = (n>0)
resto = n%10
n = (n-resto)/10
soma = (soma+resto)
print = ("A soma dos números é:", n)

-- ERROR:
File "XXXX", line 2
    while = (n>0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:37:35) 
-- CODE:
input = int("Digite um número de quatro dígitos:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = int("Digite um número de quatro dígitos:")
ValueError: invalid literal for int() with base 10: 'Digite um número de quatro dígitos:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:07:04) 
-- CODE:
input = int("Digite um número de quatro dígitos:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = int("Digite um número de quatro dígitos:")
ValueError: invalid literal for int() with base 10: 'Digite um número de quatro dígitos:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:07:07) 
-- CODE:
input = int("Digite um número de quatro dígitos:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = int("Digite um número de quatro dígitos:")
ValueError: invalid literal for int() with base 10: 'Digite um número de quatro dígitos:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:07:08) 
-- CODE:
input = int("Digite um número de quatro dígitos:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = int("Digite um número de quatro dígitos:")
ValueError: invalid literal for int() with base 10: 'Digite um número de quatro dígitos:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:07:37) 
-- CODE:
var = int(input"Digite um número com quatro digitos")

-- ERROR:
File "XXXX", line 1
    var = int(input"Digite um número com quatro digitos")
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:07:48) 
-- CODE:
var = int (input"Digite um número com quatro digitos")

-- ERROR:
File "XXXX", line 1
    var = int (input"Digite um número com quatro digitos")
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:07:54) 
-- CODE:
var = int (input"Digite um numero com quatro digitos")

-- ERROR:
File "XXXX", line 1
    var = int (input"Digite um numero com quatro digitos")
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:08:39) 
-- CODE:
number = (input("Digite um numero com quatro digitos"))

-- ERROR:
File "XXXX", line 1
    var = int (input"Digite um numero com quatro digitos")
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:08:49) 
-- CODE:
number = (input("Digite um numero com quatro digitos:"))

-- ERROR:
File "XXXX", line 1
    var = int (input"Digite um numero com quatro digitos")
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:09:02) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))


-- ERROR:
File "XXXX", line 1
    var = int (input"Digite um numero com quatro digitos")
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:09:08) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))


-- ERROR:
File "XXXX", line 1
    var = int (input"Digite um numero com quatro digitos")
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:11:38) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))
while x > 0:
    resto = x % 10
    x = x // 10
    soma = soma + resto

print("O valor é", soma) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    while x > 0:
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:12:03) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))
while number > 0:
    resto = x % 10
    x = x // 10
    soma = soma + resto

print("O valor é", soma) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resto = x % 10
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:12:37) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))
while number > 0:
resto = x % 10
x = x // 10
soma = soma + resto

print("O valor é", soma) 

-- ERROR:
File "XXXX", line 3
    resto = x % 10
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:12:45) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))
while number > 0:
rest = x % 10
x = x // 10
soma = soma + resto

print("O valor é", soma) 

-- ERROR:
File "XXXX", line 3
    rest = x % 10
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:12:49) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))
while number > 0:
rest = x % 10
x = x // 10
soma = soma + resto

print("O valor é", soma) 

-- ERROR:
File "XXXX", line 3
    rest = x % 10
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:12:52) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))
while number > 0:
rest = x % 10
x = x // 10
soma = soma + resto

print("O valor é", soma) 

-- ERROR:
File "XXXX", line 3
    rest = x % 10
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:12:53) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))
while number > 0:
rest = x % 10
x = x // 10
soma = soma + resto

print("O valor é", soma) 

-- ERROR:
File "XXXX", line 3
    rest = x % 10
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:15:03) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))
print(sum(int(i) for i in n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(sum(int(i) for i in n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:15:24) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))
print(sum(int(i) for i in number))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(sum(int(i) for i in number))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:15:46) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))
print(sum(int(i) for i in number))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(sum(int(i) for i in number))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:47:55) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))
num1 = (number//1000)
num2 = (number//100)%10
num3 = (number//10)%10
num4 = (number//10)
soma = (num1+num2+num3+num4)
print (soma)
-- OUTPUT:
934
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:48:19) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))
num1 = (number//1000)
num2 = (number//100)%10
num3 = (number//10)%10
num4 = (number%10)
soma = (num1+num2+num3+num4)
print (soma)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:48:24) 
-- CODE:
number = int(input("Digite um numero com quatro digitos:"))
num1 = (number//1000)
num2 = (number//100)%10
num3 = (number//10)%10
num4 = (number%10)
soma = (num1+num2+num3+num4)
print (soma)
-- EXECUTION TIME:
0.190457
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
